# SmartCalc

./: README.md
src/: CMakeLists.txt  Makefile  main.cc
src/controller/: controller.cc  controller.h
src/model/: model.cc  model.h
src/model/creditcalculator/: credit_calculator.cc  credit_calculator.h  credit_data.h
src/model/expressioncalculator/: calculator.cc  calculator.h
src/model/expressioncalculator/common/: error_code.h  token_data.h
src/model/expressioncalculator/convertertorpn/: converter_to_rpn.cc  converter_to_rpn.h
src/model/expressioncalculator/rpncalculation/: rpn_calculation.cc  rpn_calculation.h
src/model/expressioncalculator/stringparser/: string_parser.cc  string_parser.h
src/tests/: tests.cc
src/view/: calcwindow.cc  calcwindow.h  calcwindow.ui
src/view/QCustomPlot/: QCustomPlot.cc
